force-app/main/default/objects/Account/fields/C_Level_Contact__c.field-meta.xml
<CustomField>
    <fullName>C_Level_Contact__c</fullName>
    <description>With A-customers, please provide a C-contact as &quot;godfather&quot; for this account</description>
    <inlineHelpText>With A-customers, please provide a C-contact as &quot;godfather&quot; for this account</inlineHelpText>
    <label>C-Level Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cornelia</fullName>
            </value>
            <value>
                <fullName>Markus</fullName>
            </value>
            <value>
                <fullName>Patrick</fullName>
            </value>
            <value>
                <fullName>Ramin</fullName>
            </value>
            <value>
                <fullName>Taner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>