force-app/main/default/objects/Account/fields/Company_Size_Employees__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Employees__c</fullName>
    <description>Company Size based on the number of Employees</description>
    <inlineHelpText>Company Size based on the number of Employees</inlineHelpText>
    <label>Company Size - Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 100</fullName>
            </value>
            <value>
                <fullName>101 - 500</fullName>
            </value>
            <value>
                <fullName>501 - 1000</fullName>
            </value>
            <value>
                <fullName>&gt; 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>