force-app/main/default/objects/Account/fields/Company_Size_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Revenue__c</fullName>
    <description>Current yearly revenue of the respective company (if known).</description>
    <inlineHelpText>Current yearly revenue of the respective company (if known).</inlineHelpText>
    <label>Company Size - Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 5 Million EUR</fullName>
            </value>
            <value>
                <fullName>5-10 Million EUR</fullName>
            </value>
            <value>
                <fullName>10-100 Million EUR</fullName>
            </value>
            <value>
                <fullName>&gt; 100 Million EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>