force-app/main/default/objects/Account/fields/Core_Banking_Insurance_System__c.field-meta.xml
<CustomField>
    <fullName>Core_Banking_Insurance_System__c</fullName>
    <description>Enter the Bank or Insurance core system if known.</description>
    <inlineHelpText>Enter the Bank or Insurance core system if known.</inlineHelpText>
    <label>Core Banking/Insurance System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARZ</fullName>
            </value>
            <value>
                <fullName>Avaloq</fullName>
            </value>
            <value>
                <fullName>Bankdata (dänisch)</fullName>
            </value>
            <value>
                <fullName>Bank Pro</fullName>
            </value>
            <value>
                <fullName>Bankverlag</fullName>
            </value>
            <value>
                <fullName>Cordoba</fullName>
            </value>
            <value>
                <fullName>Cordoba / FIS</fullName>
            </value>
            <value>
                <fullName>Core Banking Suite</fullName>
            </value>
            <value>
                <fullName>Eigenanwendung</fullName>
            </value>
            <value>
                <fullName>Eigenentwicklung</fullName>
            </value>
            <value>
                <fullName>Eigenes</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>Fiducia GAD</fullName>
            </value>
            <value>
                <fullName>Guidewire (Insurance)</fullName>
            </value>
            <value>
                <fullName>Hewlett &amp; Packard Pro</fullName>
            </value>
            <value>
                <fullName>Kordoba</fullName>
            </value>
            <value>
                <fullName>MBS (Sparda DV)</fullName>
            </value>
            <value>
                <fullName>Misys</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>OS Plus</fullName>
            </value>
            <value>
                <fullName>Parthenon</fullName>
            </value>
            <value>
                <fullName>PASS Multibanking</fullName>
            </value>
            <value>
                <fullName>Proprietary System</fullName>
            </value>
            <value>
                <fullName>Raiffeisen IT</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SDK: Node.js</fullName>
            </value>
            <value>
                <fullName>Sopra MBS</fullName>
            </value>
            <value>
                <fullName>Temenos T24</fullName>
            </value>
            <value>
                <fullName>Tenemos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>