force-app/main/default/objects/Account/fields/FinreachAccID__c.field-meta.xml
<CustomField>
    <fullName>FinreachAccID__c</fullName>
    <description>Finreach Account ID from Migration Purposes</description>
    <externalId>true</externalId>
    <inlineHelpText>Finreach Account ID from Migration Purposes</inlineHelpText>
    <label>FinreachAccID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>