force-app/main/default/objects/Account/fields/Geographical_Focus__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Focus__c</fullName>
    <description>Geographical Focus of this company</description>
    <inlineHelpText>Geographical Focus of this company</inlineHelpText>
    <label>Geographical Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Central Europe</fullName>
            </value>
            <value>
                <fullName>South Europe</fullName>
            </value>
            <value>
                <fullName>East Europe</fullName>
            </value>
            <value>
                <fullName>Scandinavia</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>East Asia</fullName>
            </value>
            <value>
                <fullName>Southeast Asia</fullName>
            </value>
            <value>
                <fullName>Australia &amp; Oceania</fullName>
            </value>
            <value>
                <fullName>Central &amp; South America</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>