force-app/main/default/objects/Account/fields/InfinitecAccID__c.field-meta.xml
<CustomField>
    <fullName>InfinitecAccID__c</fullName>
    <description>Infinitec Migration ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Infinitec Migration ID</inlineHelpText>
    <label>InfinitecAccID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>