force-app/main/default/objects/Account/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a test record?</description>
    <inlineHelpText>Is this a test record?</inlineHelpText>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>