force-app/main/default/objects/Account/fields/Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form__c</fullName>
    <description>Please enter the legal form of the partner company as it is required in our compliance guideline for partners.</description>
    <inlineHelpText>Please enter the legal form of the partner company as it is required in our compliance guideline for partners.</inlineHelpText>
    <label>Legal Form</label>
    <length>30</length>
    <type>Text</type>
</CustomField>