force-app/main/default/objects/Account/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>What type of License does this Partner have?</description>
    <inlineHelpText>What type of License does this Partner have?</inlineHelpText>
    <label>License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD - to be determined</fullName>
            </value>
            <value>
                <fullName>PSD2 licensed</fullName>
            </value>
            <value>
                <fullName>PSD2 non-licensed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>