force-app/main/default/objects/Account/fields/License_Details__c.field-meta.xml
<CustomField>
    <fullName>License_Details__c</fullName>
    <description>Additional details concerning the license of the account.</description>
    <inlineHelpText>Additional details concerning the license of the account.</inlineHelpText>
    <label>License Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>