force-app/main/default/objects/Account/fields/LinkedIn_Webpage__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Webpage__c</fullName>
    <description>LinkedIn Webpage</description>
    <inlineHelpText>LinkedIn Webpage</inlineHelpText>
    <label>LinkedIn Webpage</label>
    <type>Url</type>
</CustomField>