force-app/main/default/objects/Account/fields/No_of_All_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_All_Opportunities__c</fullName>
    <description>How many Opportunities were created for this account?</description>
    <inlineHelpText>How many Opportunities were created for this account?</inlineHelpText>
    <label>No. of All Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>