force-app/main/default/objects/Account/fields/No_Opportunities_in_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>No_Opportunities_in_Pipeline__c</fullName>
    <description>How many Opportunities do we have currently in the Pipeline?</description>
    <inlineHelpText>How many Opportunities do we have currently in the Pipeline?</inlineHelpText>
    <label>No. Opportunities in Pipeline</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>