force-app/main/default/objects/Account/fields/No_Opportunities_Won__c.field-meta.xml
<CustomField>
    <fullName>No_Opportunities_Won__c</fullName>
    <description>How many Opportunities are won for this account?</description>
    <inlineHelpText>How many Opportunities are won for this account?</inlineHelpText>
    <label>No. Opportunities Won</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>