force-app/main/default/objects/Account/fields/Strategic_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Customer_Type__c</fullName>
    <description>Why is this customer a strategic customer?</description>
    <inlineHelpText>Is this customer a strategic customer?</inlineHelpText>
    <label>Strategic Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Strategic_Customer__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lighthouse</fullName>
            </value>
            <value>
                <fullName>Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>