force-app/main/default/objects/Account/fields/Trustworthy_Customer__c.field-meta.xml
<CustomField>
    <fullName>Trustworthy_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No evidence has been found to suggest that the customer is not trustworthy.</description>
    <inlineHelpText>No evidence has been found to suggest that the customer is not trustworthy.</inlineHelpText>
    <label>Trustworthy Customer</label>
    <type>Checkbox</type>
</CustomField>