force-app/main/default/objects/Account/fields/Venture_Contact__c.field-meta.xml
<CustomField>
    <fullName>Venture_Contact__c</fullName>
    <description>Finleap Ventures that this company has or had contact with</description>
    <inlineHelpText>Finleap Ventures that this company has or had contact with</inlineHelpText>
    <label>Venture Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beesy</fullName>
            </value>
            <value>
                <fullName>Clark</fullName>
            </value>
            <value>
                <fullName>Element</fullName>
            </value>
            <value>
                <fullName>Elinvar</fullName>
            </value>
            <value>
                <fullName>European Fintech Fund</fullName>
            </value>
            <value>
                <fullName>Figo</fullName>
            </value>
            <value>
                <fullName>Finleap</fullName>
            </value>
            <value>
                <fullName>Finleap Connect</fullName>
            </value>
            <value>
                <fullName>Finreach Solutions</fullName>
            </value>
            <value>
                <fullName>Infinitec Solutions</fullName>
            </value>
            <value>
                <fullName>Pair Finance</fullName>
            </value>
            <value>
                <fullName>Penta</fullName>
            </value>
            <value>
                <fullName>Perseus</fullName>
            </value>
            <value>
                <fullName>SolarisBank</fullName>
            </value>
            <value>
                <fullName>Valendo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>