force-app/main/default/objects/Account/fields/Web_Technologies__c.field-meta.xml
<CustomField>
    <fullName>Web_Technologies__c</fullName>
    <description>Web Technologies used in this company</description>
    <inlineHelpText>Web Technologies used in this company</inlineHelpText>
    <label>Web Technologies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1_and_1_hosting</fullName>
            </value>
            <value>
                <fullName>a_b__tasty</fullName>
            </value>
            <value>
                <fullName>acquisio</fullName>
            </value>
            <value>
                <fullName>act_on</fullName>
            </value>
            <value>
                <fullName>activecampaign</fullName>
            </value>
            <value>
                <fullName>add_this</fullName>
            </value>
            <value>
                <fullName>add_to_any</fullName>
            </value>
            <value>
                <fullName>adobe_business_catalyst</fullName>
            </value>
            <value>
                <fullName>adobe_dynamic_tag_management</fullName>
            </value>
            <value>
                <fullName>adroll</fullName>
            </value>
            <value>
                <fullName>akamai</fullName>
            </value>
            <value>
                <fullName>akamai_dns</fullName>
            </value>
            <value>
                <fullName>alexa</fullName>
            </value>
            <value>
                <fullName>amazon__cloudfront</fullName>
            </value>
            <value>
                <fullName>amazon_associates</fullName>
            </value>
            <value>
                <fullName>amazon_s3</fullName>
            </value>
            <value>
                <fullName>amazon_ses</fullName>
            </value>
            <value>
                <fullName>amcharts</fullName>
            </value>
            <value>
                <fullName>amplitude</fullName>
            </value>
            <value>
                <fullName>android</fullName>
            </value>
            <value>
                <fullName>apache</fullName>
            </value>
            <value>
                <fullName>app_nexus</fullName>
            </value>
            <value>
                <fullName>appboy</fullName>
            </value>
            <value>
                <fullName>appcues</fullName>
            </value>
            <value>
                <fullName>appdynamics</fullName>
            </value>
            <value>
                <fullName>asp_net</fullName>
            </value>
            <value>
                <fullName>authorizenet</fullName>
            </value>
            <value>
                <fullName>autopilot</fullName>
            </value>
            <value>
                <fullName>aweber</fullName>
            </value>
            <value>
                <fullName>aws_ec2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>