force-app/main/default/objects/Account/recordTypes/Finleap_Investor_Account.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Investor_Account</fullName>
    <active>true</active>
    <label>Finleap Investor Account</label>
</RecordType>