force-app/main/default/objects/Account/recordTypes/Standard_Account.recordType-meta.xml
<RecordType>
    <fullName>Standard_Account</fullName>
    <active>true</active>
    <description>Standard Account</description>
    <label>Standard Account</label>
</RecordType>