force-app/main/default/objects/Account/recordTypes/Standard_Partner_Account.recordType-meta.xml
<RecordType>
    <fullName>Standard_Partner_Account</fullName>
    <active>true</active>
    <description>Standard Partner Account</description>
    <label>Standard Partner Account</label>
</RecordType>