force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Country__c</columns>
    <columns>C_Level_Contact__c</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>Legal_Form__c</columns>
    <columns>Customer_Category__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>